--- a/Views/PuanBilgi/PuanGuncelle.cshtml
+++ b/Views/PuanBilgi/PuanGuncelle.cshtml
@@ -60,7 +60,7 @@
     }
 </table>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
     function up(puanId) {
@@ -77,7 +77,7 @@
             url: '/PuanBilgi/PuanGuncellemekaydet',
             data: { puanId: puanId, puan: puan, oynananOyun: oynananOyun, beraberlik: beraberlik, galibiyet: galibiyet, malubiyet: malubiyet, atilanGol: atilanGol, yenilenGol: yenilenGol, averaj: averaj},
             dataType: "JSON",
-            success: function (result) {e
+            success: function (result) {
                 if (result == "Başarılı") {
                     alert("Kayıt Başarılı");
                     location.reload();
