--- a/Views/Fikstur/FiksturEkle.cshtml
+++ b/Views/Fikstur/FiksturEkle.cshtml
@@ -17,4 +17,8 @@
     <br />
     <input type="text" placeholder="Deplasman Takım" name="Deplasman" class="form-control" />
     <br />
-    </form>
+
+
+    <button class="btn btn-primary">Ekle</button>
+
+</form>
